--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,15 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "application", media: "all",
      "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": "reload"
+      %>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/header" %>
+    <div class= "container" >
+      <%= yield %>
+      <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
