--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, (t "static_pages.home.about") %>
 <h1><%= t "static_pages.home.about" %></h1>
 <p>
-  The <a href= <%= t "static_pages.url.rails" %> >
+  <%= t "static_pages.the" %> <a href= <%= t "static_pages.url.rails" %> >
     <em><%= t "static_pages.home.tit" %></em></a> is a
   <a href= <%= t "static_pages.url.book" %> ><%= t "static_pages.book" %></a>
     <%= t "static_pages.book" %>
