--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, (t "static_pages.home.about") %>
-<h1>About</h1>
+<h1><%= t "static_pages.home.about" %></h1>
 <p>
   The <a href= <%= t "static_pages.url.rails" %> >
     <em><%= t "static_pages.home.tit" %></em></a> is a
