--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, (t "static_pages.home.help") %>
-<h1>Help</h1>
+<h1><%= t "static_pages.home.help" %></h1>
 <p>
   <%= t "static_pages.get_help" %>
   <a href= <%= t "static_pages.url.help" %> ><%= t "static_pages.rails_help" %>
