--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,4 @@
-<% provide :title, (t "static_pages.home.home") %>
-<h1>Sample App</h1>
+<h1><%= t "static_pages.home.home" %></h1>
 <p>
   <%= t "static_pages.home_page" %>
   <a href= <%= t "static_pages.url.rails" %> ><%= t "static_pages.home.tit" %>
