--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,24 @@
 <% provide :title, (t "static_pages.home.sign_up") %>
 <h1><%= t "static_pages.home.sign_up" %></h1>
-<p><%= t "static_pages.sign_up_pa" %></p>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @user, url: signup_path do |f| %>
+      <%= render "shared/error_messages", user: @user %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: "form-control" %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "form-control" %>
+
+      <%= f.label :password_confirmation, (t "static_pages.confirmation") %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+
+      <%= f.submit (t "static_pages.crea_acco"), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
