--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,28 @@
       <ul class= "nav navbar-nav navbar-right" >
         <li><%= link_to (t "static_pages.home.home"), root_path %></li>
         <li><%= link_to (t "static_pages.home.help"), help_path %></li>
-        <li><%= link_to (t "static_pages.home.log_in"),
-          (t "static_pages.home.numb_s") %></li>
+        <% if logged_in? %>
+          <li><%= link_to (t "static_pages.users"),
+            (t "static_pages.home.numb_s") %></li>
+          <li class="dropdown">
+            <a href= <%= t "static_pages.home.numb_s" %>
+              class="dropdown-toggle" data-toggle="dropdown">
+              <%= t "static_pages.acou" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to (t "static_pages.profile"), current_user %></li>
+              <li><%= link_to (t "static_pages.setting"),
+                (t "static_pages.home.numb_s") %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to (t "static_pages.log_out"),
+                  logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to (t "sessions.html.login"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
