--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -184,3 +184,17 @@ error-explanation {
 .alert {
   margin-top: 20px;
 }
+
+.checkbox {
+  margin-bottom: 10px;
+  margin-top: -10px;
+
+  span {
+    float: right;
+    font-weight: normal;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 170px;
+    margin-top: 3px;
+  }
+}
