--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,7 @@
         <li><%= link_to (t "static_pages.home.home"), root_path %></li>
         <li><%= link_to (t "static_pages.home.help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to (t "static_pages.users"),
-            (t "static_pages.home.numb_s") %></li>
+          <li><%= link_to (t "static_pages.users"), users_path %></li>
           <li class="dropdown">
             <a href= <%= t "static_pages.home.numb_s" %>
               class="dropdown-toggle" data-toggle="dropdown">
@@ -16,7 +15,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to (t "static_pages.profile"), current_user %></li>
               <li><%= link_to (t "static_pages.setting"),
-                (t "static_pages.home.numb_s") %></li>
+                edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to (t "static_pages.log_out"),
