--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,2 +1,4 @@
-<%= t "password_reset_h1" %>
-<%= @greeting %><%= t "password_reset_p" %>
+<%= t "password_reset.view.to_reset" %>
+<%= edit_password_reset_url @user.reset_token, email: @user.email %>
+<%= t "password_reset.view.expired" %>
+<%= t "password_reset.view.dont" %>
