--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,4 +1,6 @@
-<h1><%= t "password_reset_h1" %></h1>
-<p>
-  <%= @greeting %><%= t "password_reset_p" %>
-</p>
+<h1><%= t "password_reset.view.pass" %></h1>
+<p><%= t "password_reset.view.to_reset" %></p>
+<%= link_to (t "password_reset.view.reset"),
+  edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<p><%= t "password_reset.view.expired" %></p>
+<p><%= t "password_reset.view.dont" %></p>
